# python-project-83

./: .env  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  run.py
.github/workflows/: pyci.yml
page_analyzer/: __init__.py  app.py  config.py  database.py  exceptions.py  models.py  seo_analyzer.py  validator.py
page_analyzer/routes/: __init__.py  main.py  urls.py
page_analyzer/templates/: 404.html  index.html  layout.html  not_found.html  url.html  urls.html
