[project]
authors = [
    {name = "Arina Khokhlova", email = "khokhlova.arina.v@gmail.com"},
]
requires-python = "<4.0,>=3.12"
name = "hexlet-code"
version = "0.1.0"
description = "Page analyzer"
readme = "README.md"

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "gunicorn>=20.1.0",
    "Flask>=2.0.0",
    "python-dotenv>=0.20.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]