[project]
authors = [
    {name = "Arina Khokhlova", email = "khokhlova.arina.v@gmail.com"},
]
name = "hexlet-code"
version = "0.1.0"
description = "Page analyzer"
readme = "README.md"
requires-python = "<4.0,>=3.0"
dependencies = [
    "bs4>=0.0.2",
    "datetime>=5.5",
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "validators>=0.34.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "gunicorn>=20.1.0",
    "Flask>=2.0.0",
    "python-dotenv>=0.20.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]
